# django-import-export-celery

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST.in  Makefile  README.rst  SHOWCASE_AND_THANKS.md  dev-entrypoint.sh  develop.sh  docker-compose.yaml  launch_docker  requirements_test.txt  setup-dev-env.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: linters.yml  publish-to-live-pypi.yml  publish-to-test-pypi.yml
example/: Pipfile  README.rst  manage.py  pyproject.toml
example/example-data/: Winner-2019-06-27.csv
example/project/: celery.py  settings.py
example/winners/: admin.py  models.py  urls.py  wsgi.py
example/winners/migrations/: 0001_initial.py
example/winners/tests/: test_admin.py  test_fields.py  test_models.py  test_utils.py
import_export_celery/: __init__.py  admin.py  admin_actions.py  apps.py  fields.py  model_config.py  tasks.py  utils.py
import_export_celery/locale/eu/LC_MESSAGES/: django.po
import_export_celery/migrations/: 0001_initial.py  0002_auto_20190923_1132.py  0003_exportjob.py  0004_exportjob_email_on_completion.py  0005_exportjob_site_of_origin.py  0006_auto_20191125_1236.py  0007_auto_20210210_1831.py  0008_alter_exportjob_id_alter_importjob_id.py  0009_alter_exportjob_options_alter_importjob_options_and_more.py  0010_auto_20231013_0904.py  0011_exportjob_created_at_alter_exportjob_id_and_more.py
import_export_celery/models/: __init__.py  exportjob.py  importjob.py
import_export_celery/templates/email/: export_job_completion.html
(+3 files in other folders)
